Feature development completed with 3 commits

--- a/index.html
+++ b/index.html
@@ -14,4 +14,11 @@ update by f2 commit 2
 
 update by f2 commit 3
 
+update by f3
+update by f3 2
+
+update by f3 3
+update by f3 4
+update by f3 5
+
 update by MASTER....
